--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,2 +1,31 @@
 <html>
+    <head>
+        <title>
+            Article One | Anurag Singh
+        </title>        
+    </head>       
+    <body>
+        <div>
+        <a href="/">Home</a>
+        </div>
+        <hr/>
+        <h3>
+            Article One
+        </h3>    
+        <div>
+            Aug 27 2017
+        </div>
+        <div>
+            <p>
+                This is the content of my first article
+            </p>
+            <p>
+                This is the content of my first article
+            </p>
+            <p>
+                This is the content of my first article
+            </p>
+            
+        </div>     
+    </body>    
 </html>
