--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -2,7 +2,8 @@
     <head>
         <title>
             Article One | Anurag Singh
-        </title>        
+        </title>  
+        <meta name='viewport' content="width=device-width, initial=svcale=1" />
     </head>       
     <body>
         <div>
