--- a/ui/index.html
+++ b/ui/index.html
@@ -7,11 +7,11 @@
     </head>
     
     <body>
-        <div class="center" id='madi'>
+        <div id="madi"  class="center">
             <img src="/ui/madi.png" class="img-medium"/>
         </div>
         <br>
-        <div class="center text-big bold" id="main-text">
+        <div id="main-text"  class="center text-big bold">
             Hi! I am your webapp.
         </div>
     </body>
