--- a/ui/index.html
+++ b/ui/index.html
@@ -6,8 +6,8 @@
     </head>
     
     <body>
-        <div id='madi'  class="center">
-            <img src="/ui/madi.png" class="img-medium"/>
+        <div class="center">
+            <img  id='madi'   src="/ui/madi.png" class="img-medium"/>
         </div>
         <br>
         <div id='main-text'  class="center text-big bold">
