[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -6,12 +6,24 @@
     </head>
     
     <body>
+        <div class="container">
         <div class="center">
-            <img id='madi' src="/ui/madi.png" class="img-medium"/>
+            <img id='madi' src="https://pbs.twimg.com/profile_images/901806077011836928/tZPDlM0A_400x400.jpg" class="img-medium"/>
         </div>
         <br>
+        <h3>Personal</h3>
+        <div>
+            Hi, My name is Anurag Singh
+        </div>
+        <hr/>
+        <h3>Professional</h3>
+        <div>
+            I do nothing
+        </div>    
+        <hr/>    
         <div id='main-text'  class="center text-big bold">
             Hi! I am your webapp.
+        </div>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
