--- a/ui/index.html
+++ b/ui/index.html
@@ -21,8 +21,8 @@
             I do nothing
         </div>    
         <hr/>    
-        <div id='main-text'  class="center text-big bold">
-            Hi! I am your webapp.
+        <div class="footer">
+            This button <button id="counter">Click me</button> has been clicked <span id="count">0</span> times.
         </div>
         </div>
         <script type="text/javascript" src="/ui/main.js">
